Fixing top and bottom spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,13 +9,15 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   box-sizing: border-box;
-  height: 100vh;
+  height: 100%;
   border: 16px solid white;
 }
 
 .home {
   width: 84%;
   margin-left: 8%;
+  margin-top: 48px;
+  margin-bottom: 48px;
 }
 
 h1, p {
@@ -26,7 +28,6 @@ h1, p {
 
 h1 {
   font-weight: 700;
-  margin-top: 48px;
   margin-bottom: 12px;
 }
 
